// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormikCheckbox render 1`] = `
<div
  class="euiCheckbox euiCheckbox--noLabel"
>
  <input
    class="euiCheckbox__input"
    id="testing"
    name="testing"
    type="checkbox"
  />
  <div
    class="euiCheckbox__square"
  />
</div>
`;

exports[`FormikCheckbox render formRow 1`] = `
<div
  class="euiFormRow"
  id="testing-form-row-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <div
      class="euiCheckbox euiCheckbox--noLabel"
    >
      <input
        class="euiCheckbox__input"
        id="testing"
        name="testing"
        type="checkbox"
      />
      <div
        class="euiCheckbox__square"
      />
    </div>
  </div>
</div>
`;
